--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,11 @@
+buildscript {
+    repositories { jcenter() }
+
+    dependencies {
+        classpath 'com.netflix.nebula:nebula-dependency-recommender:4.1.1'
+    }
+}
+
 group 'sharpandrew'
 version '1.0-SNAPSHOT'
 
@@ -5,10 +13,16 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
+apply plugin: 'nebula.dependency-recommender'
+
+dependencyRecommendations {
+    propertiesFile file: file('versions.props')
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit'
 }
